--- a/characteristics.html
+++ b/characteristics.html
@@ -47,6 +47,18 @@
             /* 가로거리, 세로거리, 번짐정도, 색상 */
             text-shadow: 1px -1px 3px #ffa500;
         }
+
+        .shadow1 {
+            color: red;
+            text-shadow: 1px 1px black;
+        }
+        .shadow2 {
+            text-shadow: 5px 5px 10px #ffa500;
+        }
+        .shadow3 {
+            text-shadow: 7px -7px 20px #000;
+        }
+
     </style>
 </head>
 <body>
@@ -76,5 +88,8 @@
         그러나 흔히 우리는 닫혀진 문을 오랫동안 보기 때문에
         우리를 위해 열려 있는 문을 보지 못한다.
     </p>
+    <h2 class="shadow1">HTML</h2>
+    <h2 class="shadow2">CSS</h2>
+    <h2 class="shadow3">자바스크립트</h2>
 </body>
 </html>
