--- a/transform.html
+++ b/transform.html
@@ -32,7 +32,7 @@
             /* transform: skew(-30deg); */
             /* transform: rotate(45deg);
             transform-origin: 0 0; */
-            /* transform: rotateX(180deg) rotateY(64deg) translate3d(51px, 30px, 10px); */
+            transform: rotateX(180deg) rotateY(64deg) translate3d(51px, 30px, 10px);
         }
     </style>
 </head>
